[package]
name = "steamid-ng"
version = "0.3.3"
authors = ["Moses Miller <Majora320@gmail.com>"]
description = "An easy-to-use steamid type with functions to parse and render steam2 and steam3 IDs"
repository = "https://github.com/Majora320/steamid-ng"
readme = "README.md"
keywords = ["steam", "id", "steamid", "parser"]
categories = ["parser-implementations", "games"]
license = "MIT"

[dependencies]
enum_primitive = "0.1.1"
serde_derive = "1.0.94"
lazy_static = "1.3.0"
serde = "1.0.94"
regex = "1.1.9"

[dev-dependencies]
serde_json = "1.0.40"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "Majora320/steamid-ng", branch = "master" }
