[package]
name = "steamid-ng"
version = "0.3.4"
authors = ["Moses Miller <Majora320@gmail.com>"]
description = "An easy-to-use steamid type with functions to parse and render steam2 and steam3 IDs"
repository = "https://github.com/Majora320/steamid-ng"
readme = "README.md"
keywords = ["steam", "id", "steamid", "parser"]
categories = ["parser-implementations", "games"]
license = "MIT"
edition = "2021"
rust-version = "1.56"

[dependencies]
enum_primitive = "0.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.106", features = ["derive"], optional = true }
regex = "1.3.6"

[dev-dependencies]
serde_json = "1.0.51"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "Majora320/steamid-ng", branch = "master" }

[package.metadata.docs.rs]
features = ["serde"]
